# Alfred

./: .dockerignore  .editorconfig  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .ruff.toml  .secrets.baseline  LICENSE  Makefile  README.badges.md  README.md  RULEBOOK.md  docker-compose.yml  plan.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_api_final.txt  test_backend_final.txt  test_integration_output.txt  test_security_output.txt
.agent/workflows/: fix-unresolved-tasks.md
.claude/agents/: fullstack-developer.md
.claude/commands/: e2e-setup.md  write-tests.md
.github/: CODEOWNERS  CONFIGURATION_REQUIRED.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  e2e-smoke.yml  gateway-diagnostics.yml  generate-test-creds.yml  lint.yml  perf-explain.yml  perf-regression.yml  secret-scan.yml  security-scan.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_token_transfers.py  003_add_user_admin_flag.py
app/: __init__.py  config.py  dashboard.py  exceptions.py  logging_config.py  logic.py  main.py  middleware.py  models.py
app/integrations/: __init__.py  base.py  manager.py  slack.py  teams.py  telegram.py  whatsapp.py
assets/static/: index.html
backend/: __init__.py  post_install_success.py
backend/alembic/: script.py.mako
backend/app/: audit.py  config.py  dashboard.py  database.py  exceptions.py  lifespan.py  logging_config.py  logic.py  main.py  middleware.py  models.py  security.py  workers.py
backend/config/: .env.example  requirements-dev.txt  requirements.txt
backend/core/: __init__.py  audit.py  cache.py  config.py  constants.py  dashboard.py  database.py  dependencies.py  exceptions.py  lifespan.py  logging_config.py  logic.py  main.py  metrics.py  middleware.py  models.py  notifications.py  schemas.py  security.py  workers.py
backend/requirements/: requirements-dev.txt  requirements.txt
backend/tests/: conftest.py  test_api.py  test_api_contracts.py  test_quota.py  test_vacation_sharing.py
code_review/: ACCESSIBILITY_FEEDBACK_TEMPLATE.md  AI_CODE_COMMENT_EXAMPLES.md  BUGS.md  CICD_AUTOMATION_TEMPLATE.md  COMPLIANCE_REVIEW_TEMPLATE.md  FUTURE_ROADMAP.md  METRICS_KPI_TEMPLATE.md  ONBOARDING_CHECKLIST.md  PROJECT_CODE_REVIEW.md  PROJECT_OVERVIEW.md  QA_DEV_PAIRING_CHECKLIST.md  RATING.md  README.md  RESPONSIBLE_AI_RISK.md  TEST_NAMING_AND_SERVICE_DOC.md  changelog.md
code_review/bugs/: P1_n_plus_one_and_query_optimizations.md  SUMMARY.md
config/: .env.example  alembic.ini
dev/: BACKEND_MIGRATION.md
dev/QA/: FEEDBACK_LOOP_TRACKER.md  QA_FEEDBACK_TEMPLATE.md  QA_FEEDBACK_TRACKER.md  QUICK_REFERENCE.md  README.md  README_STRUCTURE.md  STRUCTURE.md  TEST_INVENTORY.md  TRAINING_ENABLEMENT_PLAN.md
dev/ci/: generate_test_credentials.py
dev/devops/: README.md  secrets.md
dev/frontend/: README.md  package-lock.json  package.json  playwright.config.js  vitest.config.js
dev/scripts/: check_health.py  force_create_tables.py  test_import_users.py
dev/static/: index.html
dev/support/: PLAYBOOK.md
dev/tools/: explain_queries.py
devops/docker/: Dockerfile  docker-compose.yml
devops/grafana/: alfred-gateway-dashboard.json
devops/scripts/: README.md  add_gdpr_ccpa_compliance.sh  add_in_app_onboarding.sh  add_localization_support.sh  add_onboarding_scripts.sh  backup_db.sh  build_minimal.sh  deploy_k8s.sh  expand_storybook_coverage.sh  implement_a11y_testing.sh  implement_audit_logging.sh  optimize_database_jobs.sh  penetration_testing_plan.md  schedule_compliance_reviews.sh  secret_rotation_plan.md  seed_data.py  setup_autoscaling.sh  setup_docker_compose_env.sh  setup_secret_rotation.sh  setup_security_headers.sh  setup_sharding_multi_region.sh
docker/: Dockerfile  docker-compose.yml
docker-tools/: MAINTAINERS.md
docker/docker-tools/: MAINTAINERS.md
docs/: AI_CODE_COMMENT_EXAMPLES.md  API.md  ARCHITECTURE.md  BACKEND_MIGRATION.md  CHANGELOG.md  CI_SECRETS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DASHBOARD.md  DEPLOYMENT.md  ENTERPRISE.md  FAQ.md  FUTURE_ROADMAP.md  Install.md  MONITORING.md  NOTIFICATIONS.md  PROJECT_STRUCTURE_ANALYSIS.md  PROVIDERS.md  README.md  REPO_STRUCTURE.md  ROADMAP.md  SECURITY.md  STACK_UPDATE.md  USER_GUIDE.md  analytics_guide.md  api_documentation.md  architecture-diagrams.md  data_catalog_metadata.md  data_enrichment_pipelines.md  data_governance_stewardship.md  data_lineage_provenance.md  data_quality_monitoring.md  docker_compose_unification.md  dockerfile_path_consistency.md  gitops_onboarding.md  multi_region_sharding.md
docs/archive/: README.md
docs/guides/: api.md  gateway-architecture.md  pre-commit-hooks.md  quickstart.md  user_guide.md
docs/operations/: DR_RUNBOOK.md  PLAYBOOK.md  backend-migration.md  blue-green-deployment.md  (+8 more)
extension/: package.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
migrations/: BACKEND_MIGRATION.md  env.py
qa/: MIGRATION_NOTICE.md  README.md  README_STRUCTURE.md  STRUCTURE.md
reviews/: BUGS_AND_IMPROVEMENTS.md  CICD_AUTOMATION_TEMPLATE.md  FUTURE_ROADMAP.md  ONBOARDING_CHECKLIST.md  PLAN_TASKS_STATUS.md  PROJECT_CODE_REVIEW.md  PR_chore_persist_enrichment_lineage.md  PR_perf_batch_queries_logging.md  Plan.md  QUARTERLY_REVIEW_SCHEDULE.md  RESPONSIBLE_AI_RISK.md  TEST_NAMING_AND_SERVICE_DOC.md  changelog.md
services/: README.md
tests/: FEEDBACK_LOOP_TRACKER.md  QA_FEEDBACK_TEMPLATE.md  QA_FEEDBACK_TRACKER.md  QUICK_REFERENCE.md  README.md  TEST_INVENTORY.md  TEST_SUMMARY.md  TRAINING_ENABLEMENT_PLAN.md  __init__.py  conftest.py  test_api.py  test_config.py  test_integration.py  test_middleware.py
tools/: README.md  check_health.py  explain_queries.py  force_create_tables.py  inspect_db.py  list_routes.py  safe_clean_ai_comments.py  test_import_users.py  validate_openapi.py
tools/cli/: alfred_cli.py  pyproject.toml
tools/sdk/python/: README.md  pyproject.toml
tools/sdk/python/alfred_sdk/: __init__.py  client.py  exceptions.py  models.py
(+1136 files in other folders)
