[project]
name = "alfred"
version = "1.0.0"
description = "Enterprise AI Credit Governance Platform - B2B Multi-LLM Proxy with Quota Management, supporting OpenAI, Anthropic, Azure, AWS Bedrock, and self-hosted models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Sergey Bar", email = "Sergeybaris@gmail.com"}
]
keywords = ["llm", "ai", "proxy", "quota", "fastapi", "openai", "anthropic", "azure", "bedrock", "enterprise", "b2b", "governance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/AlfredDev/alfred"
Documentation = "https://github.com/AlfredDev/alfred#readme"
Repository = "https://github.com/AlfredDev/alfred.git"
Issues = "https://github.com/AlfredDev/alfred/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend/app*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["backend/app"]

[tool.coverage.report]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]
fail_under = 80

[tool.pylint]
ignore = ["dev/frontend", "dev/frontend/static"]
