# Alfred - Enterprise AI Credit Governance Platform
# Project configuration: dependencies, build tools, linting, and formatting.

[project]
name = "alfred"
version = "1.0.0"
description = "Enterprise AI Credit Governance Platform - B2B Multi-LLM Proxy with Quota Management, supporting OpenAI, Anthropic, Azure, AWS Bedrock, and self-hosted models"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Sergey Bar", email = "Sergeybaris@gmail.com"}
]
keywords = ["llm", "ai", "proxy", "quota", "fastapi", "openai", "anthropic", "azure", "bedrock", "enterprise", "b2b", "governance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/AlfredDev/alfred"
Documentation = "https://github.com/AlfredDev/alfred#readme"
Repository = "https://github.com/AlfredDev/alfred.git"
Issues = "https://github.com/AlfredDev/alfred/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["services/backend/app*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "UP",   # pyupgrade (modernize syntax)
    "S",    # flake8-bandit (security)
    "SIM",  # flake8-simplify
    "T20",  # flake8-print (no print statements)
    "RET",  # flake8-return (return statement issues)
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate (commented-out code)
    "PLC",  # Pylint convention
    "PLE",  # Pylint error
    "PLW",  # Pylint warning
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in argument defaults (FastAPI Depends pattern)
    "C901",   # function complexity (addressed incrementally)
    "S101",   # assert usage (fine in tests)
    "S104",   # binding to 0.0.0.0 (intentional in server config)
    "T201",   # print found (allow in CLI tools)
    "RET504", # unnecessary assignment before return (readability preference)
    "UP007",  # use X | Y for union types (keep Optional for 3.10 compat)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106", "T201", "ERA001"]
"qa/**/*.py" = ["S101", "S106", "T201", "ERA001"]
"tools/**/*.py" = ["T201", "S603", "S607"]
"src/backend/app/routers/*.py" = ["B008"]  # FastAPI Depends() in defaults

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-single-line = false
combine-as-imports = true

[tool.pytest.ini_options]
testpaths = ["tests", "qa/Backend", "src/backend/app/tests"]
pythonpath = ["src/backend"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/backend/app"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/alembic/*",
    "*/cache.py",
    "*/constants.py",
    "*/metrics.py",
]
branch = true

[tool.coverage.report]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/cache.py",
    "*/constants.py",
    "*/metrics.py",
]
fail_under = 50
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod"
]

[tool.coverage.html]
directory = "htmlcov"

[tool.pylint]
ignore = ["src/frontend", "src/frontend/static"]
